updates style to fix alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -1802,7 +1802,7 @@ img.icono-jap-product-info{
   padding: 1vw;
   box-shadow: inset 0 1px 0 rgba(255,255,255,.35);
   max-width: 40vw;                 
-  margin-left: 4vw;
+  margin-left:5vw;
   line-height: 1.4;
 }
 #form-agregar-comentarios {
